# simavr-sim

./: Cargo.toml  README.md
src/: flashable.rs  ioctl.rs  lib.rs  uart.rs
src/test_util/: atmega328-factorial.cpp  atmega328-factorial.elf  compile_firmwares.sh  mod.rs
tests/: basic.rs
