[package]
name = "simavr-sim"
version = "0.1.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = "High level bindings to the simavr AVR simulator"
repository = "git@github.com:dylanmckay/simavr-sim.git"
license = "GPL-3.0"

[dependencies]
bitflags = "1.2"
simavr-sys = "1.5"
tempfile = "3.1"
vsprintf = "2.0"
